if (HAVE_CPP_SIMPLE)
  set(sources
    cpp_simple/cpp_simple_main.cc)
elseif (HAVE_TBB)
  set(sources
    tbb_mapping/tbb_main.cc)
elseif (HAVE_GMT)
  set(sources
    gmt_mapping/gmt_main.cc)
endif()

add_library(runtime STATIC ${sources})
if (CLANG_TIDY_EXE)
  set_target_properties(runtime PROPERTIES CXX_CLANG_TIDY "${DO_CLANG_TIDY}")
endif()

if (GPERFTOOLS_FOUND)
  target_include_directories(runtime PUBLIC ${GPERFTOOLS_INCLUDE_DIRS})
  target_link_libraries(runtime PUBLIC ${GPERFTOOLS_LIBRARIES})
endif()
if (HAVE_CPP_SIMPLE)
  #target_include_directories(runtime PUBLIC ${TBB_INCLUDE_DIRS})
  #target_link_libraries(runtime PUBLIC ${TBB_LIBRARIES})
elseif (HAVE_TBB)
  target_include_directories(runtime PUBLIC ${TBB_INCLUDE_DIRS})
  target_link_libraries(runtime PUBLIC ${TBB_LIBRARIES})
elseif (HAVE_GMT)
  target_include_directories(runtime PUBLIC ${GMT_INCLUDE_DIRS})
  target_link_libraries(runtime PUBLIC ${GMT_LIBRARIES})
endif()
install(TARGETS runtime ARCHIVE DESTINATION lib)
